--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todolist",
+  "name": "taskmate",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://dpsdmh.github.io/TaskMate.github.io/",
